reverted to unstyled scrollbar to avoid user-confusion.

--- a/html5/color1.css
+++ b/html5/color1.css
@@ -4,8 +4,6 @@ html,body,header,textarea,#chapter-name,#editor{background-color:#E9D7B3;}
 .note {background-color:#D2B67A;}
 a.button,a.button:active,a.button:visited{background-color:#CB767E;}
 a.button:hover{background-color:#E59DA4;}
-::-webkit-scrollbar{background-color:#98686D;}
-::-webkit-scrollbar-thumb:vertical{background-color:#83252E;}
 
 html,body,a,a:visited,input,textarea{color:#4A807E;}
 h1,h2,h3,h4,h5,h6{color:#415F5E;}
